--- a/MYH-Reports/appsettings.json
+++ b/MYH-Reports/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyhContext": "Server=tcp:jk-test-dd.database.windows.net,1433;Initial Catalog=MHY-Financials;Persist Security Info=False;User ID=drift;Password=Dele3vin9gne$Gml;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
